--- a/css/default-edit.css
+++ b/css/default-edit.css
@@ -29,7 +29,77 @@
 .default-button--bordered:hover {
     background: #1F2937;
 }
+
+.default-button--theme2 {
+    background-color: var(--theme__color2);
+}
+
+.default-button--lr {
+    border-radius: 12spx;
+}
+
+.text-button {
+    font-weight: 700;
+    color: #e2e8f0;
+    text-decoration: underline !important;
+}
 /* default-button-end */
+
+/* -checkbox-model- */
+.checkbox-model {
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    height: 23px;
+    width: 23px;
+    border-radius: 4px;
+    font-size: 14px;
+    flex-shrink: 0;
+    position: relative;
+    cursor: pointer;
+  }
+  .checkbox-model::before {
+    content: '';
+    height: 100%;
+    width: 100%;
+    background: #334155;
+    border: 1px solid #ffffff44;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    border-radius: inherit;
+  }
+  .checkbox-model::after {
+    content: '\f00c';
+    font-family: "Font Awesome 5 Pro";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background: #06B6D4;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size:inherit;
+    border-radius: inherit;
+    opacity: 0;
+    transition: 0.3s;
+    font-weight: 500;
+  }
+  .checkbox-model:checked::after {
+    opacity: 1;
+  }
+  .checkbox-model:focus::after {
+    border: 2px solid #fff;
+    box-shadow: 0 0 0 3px #06B6D4;
+  }
 
 /* small-tools */
 .underline {
@@ -249,3 +319,27 @@
     height: 38px;   /* Height of image */
     color: transparent;
 }
+
+
+/* ---range-slider-default--- */
+.ui-widget-content .ui-state-default {
+    height: 14px;
+    width: 14px;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 50%;
+    border: none !important;
+    border: 2px solid #22D3EE !important;
+  }
+  .ui-widget-content .ui-state-active {
+    box-shadow: 0 0 0 5px #ffffffb9;
+  }
+  .ui-slider .ui-slider-range {
+    background: #22D3EE !important;
+  }
+  #slider-range, #slider-range-mobile {
+    background: #fff;
+    height: 4px;
+    border-radius: 4px;
+    border: none;
+  }
+/* ---range-slider-default---end */
